# Amazon-Athena-Based-Large-Scale-Online-Review-Analytics-System

./: README.md  athena.ipynb  athena_to_jsonl_pipeline.py  pipeline_concepts_explained.md  prob1_results.csv  prob2_results.csv  prob3_results.csv  prob4_results.csv  prob5_results.csv  prob6_ai_comments.csv  prob6_training_data.jsonl  problem6_query.sql  pyproject.toml
