[project]
name = "assignment-athena"
version = "0.1.0"
description = "Assignment for analyzing Reddit comments using Amazon Athena"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.28.0",
    "pandas>=2.0.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "awscli>=1.42.35",
    "polars>=1.33.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.ipynb",
    "*.md",
    "img/",
]
